--- a/package.json
+++ b/package.json
@@ -7,9 +7,21 @@
     "build:live": "nodemon --exec ./node_modules/.bin/ts-node -- ./index.ts"
   },
   "devDependencies": {
+    "@types/body-parser": "1.16.8",
+    "@types/cors": "2.8.3",
+    "@types/express": "4.11.1",
+    "@types/graphql": "0.12.4",
     "@types/node": "9.4.6",
     "nodemon": "1.17.1",
     "ts-node": "5.0.0",
     "typescript": "2.7.2"
+  },
+  "dependencies": {
+    "apollo-server-express": "1.3.2",
+    "body-parser": "1.18.2",
+    "cors": "2.8.4",
+    "express": "4.16.2",
+    "graphql": "0.12.3",
+    "graphql-tools": "2.21.0"
   }
 }
