--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "cors": "2.8.4",
     "express": "4.16.2",
     "graphql": "0.12.3",
-    "graphql-tools": "2.21.0"
+    "graphql-tools": "2.21.0",
+    "moment": "2.20.1"
   }
 }
