--- a/package.json
+++ b/package.json
@@ -8,23 +8,29 @@
     "generator": "gql-gen --url http://localhost:3000/graphql --template ts --out ./types.d.ts"
   },
   "devDependencies": {
+    "@types/bcrypt-nodejs": "0.0.30",
     "@types/body-parser": "1.16.8",
     "@types/cors": "2.8.3",
     "@types/express": "4.11.1",
     "@types/graphql": "0.12.4",
     "@types/node": "9.4.6",
+    "@types/passport": "0.4.3",
+    "@types/passport-http": "0.3.5",
     "nodemon": "1.17.1",
     "ts-node": "5.0.0",
     "typescript": "2.7.2"
   },
   "dependencies": {
     "apollo-server-express": "1.3.2",
+    "bcrypt-nodejs": "0.0.3",
     "body-parser": "1.18.2",
     "cors": "2.8.4",
     "express": "4.16.2",
     "graphql": "0.12.3",
     "graphql-code-generator": "0.8.14",
     "graphql-tools": "2.21.0",
-    "moment": "2.20.1"
+    "moment": "2.20.1",
+    "passport": "0.4.0",
+    "passport-http": "0.3.0"
   }
 }
