--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/passport": "0.4.3",
     "@types/passport-http": "0.3.5",
     "@types/pg": "7.4.4",
+    "@types/ws": "^4.0.2",
     "nodemon": "1.17.1",
     "ts-node": "5.0.0",
     "typescript": "2.7.2"
